# mlops2

./: LICENSE  README.md  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
lab10/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
lab10/ex1/: main.tf  outputs.tf  repository.tf  terraform.tfstate  variables.tf
lab10/ex2/: main.tf  outputs.tf  s3.tf  terraform.tfstate  variables.tf
lab10/ex3/: main.tf  outputs.tf  s3.tf  variables.tf
lab12/HW/: compose.yaml
lab12/HW/ml-init/: init.sql
lab12/LAB/: compose.yaml  pyproject.toml
lab13/hw/: client.py  pyproject.toml  tavily_server.py  weather_server.py
lab13/lab/: ex1.py  ex2.py  ex3_client.py  ex3_mcp.py  ex3_weather_mcp.py  ex4_server.py  ex4_test.py  ex5.py  pyproject.toml
lab2/: README.md  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
lab2hw/: compose.yaml  lab2hw.ipynb  main.py  pyproject.toml
lab3/: lab3_hw.ipynb  notebook_polars.ipynb  pyproject.toml
lab4/: hw.ipynb  milvus.ipynb  pyproject.toml  vectorscale.ipynb
lab4/vectorscale_db/: docker-compose.yaml
lab5/: LAB_INSTRUCTION_2_MLFLOW.ipynb
lab5/images/: desktop.ini
lab6/: LAB_INSTRUCTION.ipynb  homework.ipynb
lab7/: lab7.ipynb  pyproject.toml
lab7/onnx_app/: Dockerfile  main.py  requirements.txt
lab7/torch_app/: Dockerfile  main.py  requirements.txt
lab9/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
lab9/config/: .env.dev  .env.prod  .env.test
lab9/src/: app.py  download_s3.py  inference.py  main.py  settings.py  training.py
lab9/tests/: test_app.py  test_settings.py
(+13 files in other folders)
