[project]
name = "MLOps_course_AGH_lab_07"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=7.1.0",
    "numpy",
    "onnx",
    "onnxruntime",
    "onnxscript>=0.5.6",
    "torch",
    "transformers",
    "triton-windows>=3.5.1.post21",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
